plugins {
    id 'java'
    id 'application'
    id 'org.graalvm.buildtools.native' version '0.10.1'
}

//rootProject.name = 'SaveTree'
version = '0.1'

sourceSets {
    main {
        java {
            srcDirs = ['src']
        }
        // java.destinationDirectory = file('bin')
        // java.destinationDirectory = file('classes')
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += ['--enable-preview']
    standardInput = System.in
    outputs.upToDateWhen { false }
}

tasks.withType(Test).configureEach {
    jvmArgs += ['--enable-preview']
}

application {
    mainClass = 'Main'
}

graalvmNative {
    toolchainDetection = false
    binaries {
        main {
            imageName = 'SaveTree'
            mainClass = 'Main'
            buildArgs.add('--enable-preview')
        }
    }
}